// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate changeset file > should generate changeset file, but skip commit and push 1`] = `
"---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
"
`;

exports[`generate changeset file > should generate changeset file, commit and push 1`] = `
"---
'packageName': patch
---

Updated dependency \`packagez\` to \`version2\`.
Updated dependency \`packagea\` to \`version\`.
"
`;

exports[`generate changeset file > should generate sorted changeset file, but skip commit and push 1`] = `
"---
'packageNameA': patch
'packageNameB': patch
---

Updated dependency \`packagea\` to \`version\`.
Updated dependency \`packagez\` to \`version2\`.
"
`;

exports[`generate changeset file > should not skip if branch starts with custom branch prefix 1`] = `
"---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
"
`;

exports[`generate changeset file > should not skip if not in renovate branch, when branch check skip is true 1`] = `
"---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
"
`;
